--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Carolina</title>
     <meta name="author" content="jonobr1">
     <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="viewport" content="width=device-width, user-scalable=no">
     <meta name="format-detection" content="telephone=no">
     <link rel="apple-touch-icon" href="./images/apple-touch-icon.png"/>
